some features of admin panel done

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,11 @@
         grid-template-columns: 1fr 1fr;
       }
     }
+   .box{
+    border-radius: 20px;
+    border-color: azure;
+    border: 2px;
+   }
   </style>
 </head>
 
