--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React + TS</title>
-  <style>
+  <!-- <style>
     .con {
       display: grid;
       grid-template-columns: 1fr;
@@ -22,7 +22,7 @@
     border-color: azure;
     border: 2px;
    }
-  </style>
+  </style> -->
 </head>
 
 <body>
